# robotics

./: .gitignore  README.md
beluga/src/: CMakeLists.txt
beluga/src/Algorithms/: CMakeLists.txt
beluga/src/Algorithms/AStar/: CMakeLists.txt
beluga/src/Algorithms/AStar/include/: Node2d.hpp
beluga/src/Algorithms/AStar/src/: CMakeLists.txt  Node2d.cpp
beluga/src/Apps/: CMakeLists.txt
beluga/src/Apps/Scenes/: Graph2d.csv
beluga/src/Apps/src/: CMakeLists.txt
beluga/src/Apps/src/GraphViz/: GraphViz.cpp  GraphViz.hpp
beluga/src/CoreCpp/: CMakeLists.txt
beluga/src/CoreCpp/include/: CoreCppTypes.hpp  DocumentReader.hpp  GraphReader2d.hpp  IContent.hpp  IGraphReader.hpp
beluga/src/CoreCpp/src/: CMakeLists.txt  DocumentReader.cpp  GraphReader2d.cpp  placeholder.cpp
beluga/src/Graph/: CMakeLists.txt
beluga/src/Graph/doc/: GraphClassDiagram.wsd
beluga/src/Graph/include/: Edge.hpp  EdgeContent.hpp  GenericContentGraph.hpp  GenericContentNode.hpp  Graph.hpp  Graph2d.hpp  IGraph.hpp  IGraphElement.hpp  INode.hpp  Node.hpp  Node2d.hpp  NodeContent.hpp
beluga/src/Graph/include/Graph/: Graph2d.hpp  IGraph.hpp
beluga/src/Graph/include/Node/: Node2d.hpp
beluga/src/Graph/include/Visitor/: GraphBuilderVisitor.hpp  IGraphVisitor.hpp
beluga/src/Graph/src/: CMakeLists.txt  Edge.cpp  EdgeContent.cpp  GenericContentGraph.cpp  GenericContentNode.cpp  Graph.cpp  Graph2d.cpp  Node.cpp  Node2d.cpp  NodeContent.cpp
beluga/src/Graph/src/Graph/: Graph2d.cpp
beluga/src/Graph/src/Node/: Node2d.cpp
beluga/src/Graph/src/Visitor/: GraphBuilderVisitor.cpp
beluga/src/Graph/test/: CMakeLists.txt  GraphTest.cpp
beluga/src/Graph/test/testGraph/: Graph2d.csv  Graph2d.json  contentGraph.json  graph.json
beluga/src/Visualization/: CMakeLists.txt
beluga/src/Visualization/include/: GraphViz.hpp
beluga/src/Visualization/src/: CMakeLists.txt  GraphViz.cpp
beluga/src/Visualization/test/: CMakeLists.txt  main.cpp
beluga/src/olcPixelGameEngine/: CMakeLists.txt
beluga/src/olcPixelGameEngine/src/: CMakeLists.txt  olcPixelGameEngine.cpp
mantaray/: CMakeLists.txt  README.md  run_sln.sh
mantaray/src/: CMakeLists.txt  camera.hpp  colour.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
medusa/: CMakeLists.txt  CMakePresets.json  README.txt  main.cpp
medusa/apps/: Analysis.cpp  CMakeLists.txt
medusa/include/: CMakeLists.txt
medusa/include/LinearAlgebra/: Vec.hpp
medusa/include/OptimizationAlgorithms/: Bracketing.hpp  DesignDirection.hpp  DesignPoint.hpp  LocalDescent.hpp  TestFunctions.hpp
medusa/scripts/journal-club-presentation/: CE and CMA-ES.ipynb
medusa/scripts/santi-notebook/: Manifest.toml  Project.toml  gradientDescent.ipynb
medusa/src/: Bracketing.cpp  CMakeLists.txt
medusa/testData/ackley/: AckleyFunction.jl  AckleyOneDim.csv  AckleyTwoDim.csv  README.md
medusa/testData/booth/: BoothFunction.py  README.md
medusa/testData/quadratic/: quadratic.py
tiger/: main.py
tiger/BanditProblem/: NonStationaryBandit.ipynb  NonstationaryBandit.py  ObjectOrientedGenericBandit.py  ParallelNonStationaryBandit.ipynb  Readme.md  StationaryBandit.ipynb  nArmedBandit.py
